kubernetes/external-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-nginx
  namespace: borg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-nginx
  template:
    metadata:
      labels:
        app: external-nginx
    spec:
      containers:
        - name: external-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: external-nginx-config
