kubernetes/external-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-nginx-service
  namespace: borg
spec:
  selector:
    app: external-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
